syntax = "proto3";

option go_package = "genproto/";

package voting;



service ElectionService {
    rpc CreateElection(CreateElectionRequest) returns (ElectionResponse) {}
    rpc GetElectionInfo(GetElectionInfoRequest) returns (ElectionResponse) {}
    rpc UpdateElection(UpdateElectionRequest) returns (ElectionResponse) {}
    rpc DeleteElection(DeleteElectionRequest) returns (Void2) {}
}

message CreateElectionRequest {
    string name = 1;
    string date = 2;
    
}


message GetElectionInfoRequest {
    string id = 1;
}

message UpdateElectionRequest {
    string id = 1;
}

message DeleteElectionRequest {
    string id = 1;
}

message ElectionResponse {
    string id = 1;
    string name = 2;
    string date = 3;
}

message Void2 {}
